errorlogs/1516474242606-Program3- DeterminePrimes.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
133 INFO: PyInstaller: 3.3.1
133 INFO: Python: 3.4.4
134 INFO: Platform: Windows-XP-5.1.2600-SP3
135 INFO: wrote Z:\p2e\Program3- DeterminePrimes.spec
140 INFO: UPX is not available.
141 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
143 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516474242606', 'Z:\\p2e']
144 INFO: checking Analysis
144 INFO: Building Analysis because out00-Analysis.toc is non existent
144 INFO: Initializing module dependency graph...
152 INFO: Initializing module graph hooks...
155 INFO: Analyzing base_library.zip ...
6782 INFO: Processing pre-find module path hook   distutils
10040 INFO: running Analysis out00-Analysis.toc
10595 INFO: Caching module hooks...
10607 INFO: Analyzing Z:\p2e\workingdir\1516474242606\Program3- DeterminePrimes.py

Syntax error in Z:\p2e\workingdir\1516474242606\Program3- DeterminePrimes.py
  File "Z:\p2e\workingdir\1516474242606\Program3- DeterminePrimes.py", line 33
     print(f"There are {count} prime numbers less than {number_bound}.")
                                                                      ^
 SyntaxError: invalid syntax

